--- a/client/package.json
+++ b/client/package.json
@@ -10,38 +10,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.2",
-    "@angular/cdk": "^14.0.2",
-    "@angular/common": "^14.0.2",
-    "@angular/compiler": "^14.0.2",
-    "@angular/core": "^14.0.2",
-    "@angular/forms": "^14.0.2",
-    "@angular/material": "^14.0.2",
-    "@angular/platform-browser": "^14.0.2",
-    "@angular/platform-browser-dynamic": "^14.0.2",
-    "@angular/router": "^14.0.2",
+    "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
     "@juggle/resize-observer": "^3.3.1",
     "ajv": "^8.10.0",
     "html-to-rtf-browser": "^1.6.1",
     "ngx-progressbar": "^6.1.1",
-    "ngx-quill": "^17.0.0",
-    "rxjs": "~6.6.0",
+    "ngx-quill": "^18.0.0",
+    "rxjs": "^7.5.6",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.2",
-    "@angular/cli": "^14.0.2",
-    "@angular/compiler-cli": "^14.0.2",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
+    "@types/jasmine": "^3.6.0",
     "@types/node": "^12.20.55",
     "@types/quill": "^1.3.10",
     "jasmine-core": "^3.99.0",
     "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.7.4"
+    "typescript": "^4.7.4"
   }
 }
